--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <h1>Programas y Actividades</h1>
             <ul class="horizontalList activityProgramsList">
                 <li>
-                    <img width="50" height="50" src="https://img.icons8.com/external-outline-chattapat-/64/external-care-family-outline-chattapat--3.png" alt="external-care-family-outline-chattapat--3"/>                    <h2>Cuidado Integral</h2>
+                    <img width="50" height="50" src="https://img.icons8.com/external-outline-chattapat-/64/external-care-family-outline-chattapat--3.png" alt="external-care-family-outline-chattapat--3"/>
+                    <h2>Cuidado Integral</h2>
                     <p>Proporcionamos un entorno familiar y seguro para los niños, donde tienen acceso a comida, vivienda y cuidado médico.</p>
                 </li>
                 <li>
@@ -80,7 +81,8 @@
                     <p>Ofrecemos atención médica preventiva y curativa, así como apoyo psicológico para promover la salud integral de los niños.</p>
                 </li>
                 <li>
-                    <img width="50" height="50" src="https://img.icons8.com/ios/50/collaborating-in-circle.png" alt="collaborating-in-circle"/>                    <h1>Desarrollo Comunitario</h1>
+                    <img width="50" height="50" src="https://img.icons8.com/ios/50/collaborating-in-circle.png" alt="collaborating-in-circle"/>
+                    <h1>Desarrollo Comunitario</h1>
                     <p>Trabajamos en proyectos que benefician no solo a los niños en nuestro orfanato, sino también a la comunidad en general, fomentando un sentido de pertenencia y solidaridad.</p>
                 </li>
             </ul>
