Added img and new styles

--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
     <main>
         <section class="about">
-            <aside class="imgContainer">
-                <img class="imgAbout" src="./data/img/childrenImg/3.png" alt="">
-            </aside>
+
             <div class="textAbout">
                 <h1>Objetivo</h1>
                 <p>
-                    La ONG "Moshi Msamaria" se compromete a mejorar la vida de 100 niños en situación de orfandad en Tanzania, 
+                    La Asociación "Moshi Msamaria" se compromete a mejorar la vida de 100 niños en situación de orfandad en Tanzania, 
                     específicamente en la región de Moshi. Nuestra misión es brindarles un hogar seguro, acceso a educación de
                      calidad, atención médica y apoyo emocional, para que puedan crecer y desarrollarse en un entorno propicio.
                 </p>
@@ -56,7 +54,7 @@
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/student-activity.png" alt="student-activity"/>
-                    <h1>Colaboración</h1>
+                    <h2>Colaboración</h2>
                     <p>Trabajamos en estrecha colaboración con las autoridades locales, otras organizaciones y la comunidad en general para maximizar el impacto positivo de nuestras intervenciones.</p>
                 </li>
             </ul>
@@ -82,7 +80,7 @@
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/collaborating-in-circle.png" alt="collaborating-in-circle"/>
-                    <h1>Desarrollo Comunitario</h1>
+                    <h2>Desarrollo Comunitario</h2>
                     <p>Trabajamos en proyectos que benefician no solo a los niños en nuestro orfanato, sino también a la comunidad en general, fomentando un sentido de pertenencia y solidaridad.</p>
                 </li>
             </ul>
@@ -90,12 +88,20 @@
 
         <section class="tribute">
             <h1>¿Cómo puede ayudar tu aportación?</h1>
-            <div class="tributeList">
-                <p>Contribuirás a garantizar que los niños tengan acceso a una educación de calidad, incluyendo matrícula escolar, materiales educativos y programas extracurriculares.</p>
-                <p>Tu donación puede financiar la atención médica necesaria, medicamentos y servicios de salud preventiva para garantizar el bienestar físico y emocional de los niños.</p>
-                <p> Tu donativo puede respaldar programas de apoyo psicológico y emocional para los niños que hayan experimentado traumas o dificultades emocionales.</p>
-                <p> Contribuirás a proyectos que beneficien no solo a los niños en el orfanato, sino también a la comunidad en general, como la construcción de pozos de agua, programas de nutrición comunitaria, o iniciativas de desarrollo económico local.</p>
-            </div>
+                <ul class="tributeList">
+                    <li>
+                        <p><b>Contribuirás a garantizar que los niños tengan acceso a una educación de calidad,</b> incluyendo matrícula escolar, materiales educativos y programas extracurriculares.</p>
+                    </li>
+                    <li>
+                        <p><b>Tu donación puede financiar la atención médica necesaria,</b> medicamentos y servicios de salud preventiva para garantizar el bienestar físico y emocional de los niños.</p>
+                    </li>
+                    <li>
+                        <p><b>Tu donativo puede respaldar programas de apoyo psicológico y emocional para los niños</b> que hayan experimentado traumas o dificultades emocionales.</p>
+                    </li>
+                    <li>
+                        <p><b>Contribuirás a proyectos que beneficien no solo a los niños en el orfanato, sino también a la comunidad en general,</b> como la construcción de pozos de agua, programas de nutrición comunitaria, o iniciativas de desarrollo económico local.</p>
+                    </li>
+                </ul>
         </section>
 
 
