minor responsive fix

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </p>
         </section>
 
-        <section class="horizontalContainer values">
+        <section class="horizontalContainer">
             <h1>Valores</h1>
-            <ul class="horizontalList valueList">
+            <div class="horizontalList">
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/hug.png" alt="hug"/>
                     <h2>Compasión</h2>
@@ -57,12 +57,12 @@
                     <h2>Colaboración</h2>
                     <p>Trabajamos en estrecha colaboración con las autoridades locales, otras organizaciones y la comunidad en general para maximizar el impacto positivo de nuestras intervenciones.</p>
                 </li>
-            </ul>
+            </div>
         </section>
 
-        <section class="horizontalContainer activityPrograms">
+        <section class="horizontalContainer ">
             <h1>Programas y Actividades</h1>
-            <ul class="horizontalList activityProgramsList">
+            <div class="horizontalList ">
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/external-outline-chattapat-/64/external-care-family-outline-chattapat--3.png" alt="external-care-family-outline-chattapat--3"/>
                     <h2>Cuidado Integral</h2>
@@ -83,12 +83,12 @@
                     <h2>Desarrollo Comunitario</h2>
                     <p>Trabajamos en proyectos que benefician no solo a los niños en nuestro orfanato, sino también a la comunidad en general, fomentando un sentido de pertenencia y solidaridad.</p>
                 </li>
-            </ul>
+            </div>
         </section>
 
         <section class="tribute">
             <h1>¿Cómo puede ayudar tu aportación?</h1>
-                <ul class="tributeList">
+                <div class="tributeList">
                     <li>
                         <p><b>Contribuirás a garantizar que los niños tengan acceso a una educación de calidad,</b> incluyendo matrícula escolar, materiales educativos y programas extracurriculares.</p>
                     </li>
@@ -101,7 +101,7 @@
                     <li>
                         <p><b>Contribuirás a proyectos que beneficien no solo a los niños en el orfanato, sino también a la comunidad en general,</b> como la construcción de pozos de agua, programas de nutrición comunitaria, o iniciativas de desarrollo económico local.</p>
                     </li>
-                </ul>
+                </div>
         </section>
 
 
