Estilos y arreglos en el responsive
- Añadido barra de navegación para las diferentes paginas del sitio
- Añadido iconos para dispositivos portables
- Mejorado el responsive
- Añadido fotos y footer personalizado.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <header>
         <a href="./index.html" class="logo"><img src="./data/img/logo/rev1.png" alt="logo de la empresa" ></a>
+        <nav>
+            <ul class="url">
+                <a href="./index.html"><li>Página principal</li></a>
+                <a href="./menus.html"><li>Menús</li></a>
+                <a href="./proyectos"><li>Proyectos</li></a>
+                <a href="#donacion"><li>Donativo</li></a>
+            </ul>
+            <ul class="icons">
+                <a href="./index.html"><li><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-HomeAlt1"><path d="M21 19v-6.733a4 4 0 0 0-1.245-2.9L13.378 3.31a2 2 0 0 0-2.755 0L4.245 9.367A4 4 0 0 0 3 12.267V19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"/><path d="M9 15a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v6H9v-6z"/></svg></li></a>
+                <a href="./menus.html"><li><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Utensils"><path d="M11 8V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a4 4 0 0 0 4 4h1a4 4 0 0 0 4-4z"/><path d="M15 16V2h3a4 4 0 0 1 4 4v10h-4"/><path d="M15 16v5a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-5"/><path d="M5 12v9a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-9"/><path d="M5 6V2"/><path d="M8 6V2"/></svg></li></a>
+                <a href="./proyectos"><li><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Newspaper"><path d="M5 21h12a4 4 0 0 0 4-4V5a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v13c0 1.657-.343 3-2 3z"/><path d="M3 10a2 2 0 0 1 2-2h2v10.5c0 1.38-.62 2.5-2 2.5s-2-1.12-2-2.5V10z"/><circle cx="12" cy="8" r="1"/><path d="M11 14h6"/><path d="M11 17h3"/></svg></li></a>
+                <a href="#donacion"><li><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Money"><path d="M2 7a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V7z"/><circle cx="12" cy="12" r="3"/><path d="M2 9v0a4 4 0 0 0 4-4v0"/><path d="M18 19v0a4 4 0 0 1 4-4v0"/></svg></li></a>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -60,6 +74,14 @@
             </div>
         </section>
 
+        <section class="horizontalContainerImg">
+                <img class="col1" src="./data/img/childrenImg/4.png" alt="">
+                <img class="col2" src="./data/img/childrenImg/1713126252691.jpg" alt="">
+                <img class="col3" src="./data/img/childrenImg/3.png" alt=""/>
+                <img class="col4" src="./data/img/childrenImg/1713126252642.jpg" alt=""/>
+
+        </section>
+
         <section class="horizontalContainer ">
             <h1>Programas y Actividades</h1>
             <div class="horizontalList ">
@@ -86,6 +108,13 @@
             </div>
         </section>
 
+        <section class="horizontalContainerImg">
+            <img class="col1" src="./data/img/childrenImg/6.jpg" alt=""/>
+            <img class="col2" src="./data/img/childrenImg/9.jpg" alt="">
+            <img class="col3" src="./data/img/childrenImg/8.jpg" alt=""/>
+            <img class="col4" src="./data/img/childrenImg/7.jpg" alt="">
+    </section>
+
         <section class="tribute">
             <h1>¿Cómo puede ayudar tu aportación?</h1>
                 <div class="tributeList">
@@ -103,11 +132,84 @@
                     </li>
                 </div>
         </section>
+        
 
 
     </main>
 
     <footer>
+        <div class="background">
+            <svg class="fondoFooter"
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              width="100%"
+              height="100%"
+              viewBox="0 0 1600 900"
+            >
+              <defs>
+                <linearGradient id="bg" x2="0%" y2="100%">
+                  <stop
+                    offset="0%"
+                    style="stop-color:rgb(124, 64, 11, 0.4)"
+                  ></stop>
+                  <stop
+                    offset="100%"
+                    style="stop-color: rgb(152, 78, 8, 0.5)"
+                  ></stop>
+                </linearGradient>
+                <path
+                  id="wave"
+                  fill="url(#bg)"
+                  d="M-363.852,502.589c0,0,236.988-41.997,505.475,0
+            s371.981,38.998,575.971,0s293.985-39.278,505.474,5.859s493.475,48.368,716.963-4.995v560.106H-363.852V502.589z"
+                />
+              </defs>
+              <g>
+                <use xlink:href="#wave" opacity=".3">
+                  <animateTransform
+                    attributeName="transform"
+                    attributeType="XML"
+                    type="translate"
+                    dur="8s"
+                    calcMode="spline"
+                    values="270 230; -334 180; 270 230"
+                    keyTimes="0; .5; 1"
+                    keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                    repeatCount="indefinite"
+                  />
+                </use>
+                <use xlink:href="#wave" opacity=".6">
+                  <animateTransform
+                    attributeName="transform"
+                    attributeType="XML"
+                    type="translate"
+                    dur="6s"
+                    calcMode="spline"
+                    values="-270 230;243 220;-270 230"
+                    keyTimes="0; .6; 1"
+                    keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                    repeatCount="indefinite"
+                  />
+                </use>
+                <use xlink:href="#wave" opacty=".9">
+                  <animateTransform
+                    attributeName="transform"
+                    attributeType="XML"
+                    type="translate"
+                    dur="4s"
+                    calcMode="spline"
+                    values="0 230;-140 200;0 230"
+                    keyTimes="0; .4; 1"
+                    keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                    repeatCount="indefinite"
+                  />
+                </use>
+              </g>
+            </svg>
+          </div>
 
     </footer>
 </body>
