--- a/index_EN.html
+++ b/index_EN.html
@@ -13,10 +13,10 @@
         <a href="./index.html" class="logo"><img src="./data/img/logo/rev2.png" alt="logo de la empresa" ></a>
         <nav>
             <ul class="url">
-                <a href="#body"><li>Inicio</li></a>
-                <a href="#contenedorDonacion"><li>Donativo</li></a>
-                <a href="#menus"><li>Menús</li></a>
-                <a href="#proyectos"><li>Proyectos</li></a>
+                <a href="#body"><li>Home</li></a>
+                <a href="#contenedorDonacion"><li>Donations</li></a>
+                <a href="#menus"><li>Food menu</li></a>
+                <a href="#proyectos"><li>Projects</li></a>
                 <a>
                     <li class="cambiarIdioma" >
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Globe"><circle cx="12" cy="12" r="10"/><ellipse cx="12" cy="12" rx="10" ry="4" transform="rotate(90 12 12)"/><path d="M2 12h20"/></svg>
@@ -50,46 +50,50 @@
         <section class="about">
 
             <div class="textAbout">
-                <h1>Objetivo</h1>
+                <h1>Objetive</h1>
                 <p>
-                    La Asociación "Moshi Msamaria" se compromete a mejorar la vida de 100 niños en situación de orfandad en Tanzania, 
-                    específicamente en la región de Moshi. Nuestra misión es brindarles un hogar seguro, acceso a educación de
-                     calidad, atención médica y apoyo emocional, para que puedan crecer y desarrollarse en un entorno propicio.
+                    The "Moshi Msamaria Association" is committed to improving the lives of 100 orphaned children in Tanzania, specifically in the Moshi region. Our mission is to provide them with a safe home, access to quality education, medical care, and emotional support, so they can grow and thrive in a conducive environment.
                 </p>
-                <h1>Visión</h1>
+                <h1>Vision</h1>
                 <p>
-                    Nos esforzamos por crear un futuro lleno de esperanza y oportunidades para los niños desfavorecidos de Moshi.
-                     Queremos ser un faro de amor y cuidado en sus vidas, brindándoles las herramientas necesarias para que se 
-                     conviertan en líderes resilientes y contribuyentes en sus comunidades.
+                    We strive to create a future full of hope and opportunities for the underprivileged children of Moshi. We aim to be a beacon of love and care in their lives, providing them with the necessary tools to become resilient leaders and contributors in their communities.
                 </p>
-                <h1>Impacto</h1>
+                <h1>Impact</h1>
                 <p>
-                    Desde nuestra fundación, hemos transformado las vidas de numerosos niños en Moshi, brindándoles amor, educación y esperanza para un futuro mejor. Nuestros exalumnos han continuado sus estudios y han contribuido positivamente a sus comunidades, demostrando el poder transformador del cuidado y el apoyo adecuados.
+                    Since our foundation, we have transformed the lives of numerous children in Moshi, providing them with love, education, and hope for a better future. Our alumni have continued their studies and have positively contributed to their communities, demonstrating the transformative power of proper care and support.
                 </p>
         </section>
 
         <section class="horizontalContainer">
-            <h1>Valores</h1>
+            <h1>Values</h1>
             <div class="horizontalList">
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/hug.png" alt="hug"/>
-                    <h2>Compasión</h2>
-                    <p>Nos preocupamos profundamente por el bienestar de cada niño y nos esforzamos por entender y atender sus necesidades individuales.</p>
+                    <h2>Compassion</h2>
+                    <p>
+                        We deeply care about the well-being of each child and strive to understand and address their individual needs.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/crowd.png" alt="crowd"/>
-                    <h2>Integridad</h2>
-                    <p>Operamos con transparencia y honestidad en todas nuestras acciones, asegurando la confianza de nuestros donantes y la comunidad en general.</p>
+                    <h2>Integrity</h2>
+                    <p>
+                        We operate with transparency and honesty in all our actions, ensuring the trust of our donors and the community at large.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/connectivity-and-help.png" alt="connectivity-and-help"/>
-                    <h2>Dedicación</h2>
-                    <p>Estamos comprometidos a proporcionar un cuidado continuo y de alta calidad a los niños bajo nuestra tutela, sin importar los desafíos que enfrentemos.</p>
+                    <h2>Dedication</h2>
+                    <p>
+                        We are committed to providing continuous, high-quality care to the children under our guardianship, no matter the challenges we face.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/student-activity.png" alt="student-activity"/>
-                    <h2>Colaboración</h2>
-                    <p>Trabajamos en estrecha colaboración con las autoridades locales, otras organizaciones y la comunidad en general para maximizar el impacto positivo de nuestras intervenciones.</p>
+                    <h2>Collaboration</h2>
+                    <p>
+                        We work closely with local authorities, other organizations, and the community at large to maximize the positive impact of our interventions.
+                    </p>
                 </li>
             </div>
         </section>
@@ -103,27 +107,35 @@
         </section>
 
         <section class="horizontalContainer ">
-            <h1>Programas y Actividades</h1>
+            <h1>Programs and Activities</h1>
             <div class="horizontalList ">
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/external-outline-chattapat-/64/external-care-family-outline-chattapat--3.png" alt="external-care-family-outline-chattapat--3"/>
-                    <h2>Cuidado Integral</h2>
-                    <p>Proporcionamos un entorno familiar y seguro para los niños, donde tienen acceso a comida, vivienda y cuidado médico.</p>
+                    <h2>Comprehensive Care</h2>
+                    <p>
+                        We provide a family-like and secure environment for the children, where they have access to food, housing, and medical care.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/student-center.png" alt="student-center"/>
-                    <h2>Educación</h2>
-                    <p>Garantizamos que todos los niños tengan acceso a una educación de calidad, brindándoles oportunidades para desarrollar su potencial académico y personal.</p>
+                    <h2>Education</h2>
+                    <p>
+                        We ensure that all children have access to quality education, providing them with opportunities to develop their academic and personal potential.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/heart-with-pulse--v1.png" alt="heart-with-pulse--v1"/>
-                     <h2>Salud y Bienestar</h2>
-                    <p>Ofrecemos atención médica preventiva y curativa, así como apoyo psicológico para promover la salud integral de los niños.</p>
+                     <h2>Health and Well-being</h2>
+                    <p>
+                        We provide preventive and curative medical care, as well as psychological support, to promote the overall health of the children.
+                    </p>
                 </li>
                 <li>
                     <img width="50" height="50" src="https://img.icons8.com/ios/50/collaborating-in-circle.png" alt="collaborating-in-circle"/>
-                    <h2>Desarrollo Comunitario</h2>
-                    <p>Trabajamos en proyectos que benefician no solo a los niños en nuestro orfanato, sino también a la comunidad en general, fomentando un sentido de pertenencia y solidaridad.</p>
+                    <h2>Community Developmen</h2>
+                    <p>
+                        We work on projects that benefit not only the children in our orphanage but also the community at large, fostering a sense of belonging and solidarity.
+                    </p>
                 </li>
             </div>
         </section>
@@ -136,53 +148,45 @@
         </section>
 
         <section class="tribute">
-            <h1>¿Cómo puede ayudar tu aportación?</h1>
-                <div class="tributeList">
-                    <li>
-                        <p><b>Contribuirás a garantizar que los niños tengan acceso a una educación de calidad,</b> incluyendo matrícula escolar, materiales educativos y programas extracurriculares.</p>
-                    </li>
-                    <li>
-                        <p><b>Tu donación puede financiar la atención médica necesaria,</b> medicamentos y servicios de salud preventiva para garantizar el bienestar físico y emocional de los niños.</p>
-                    </li>
-                    <li>
-                        <p><b>Tu donativo puede respaldar programas de apoyo psicológico y emocional para los niños</b> que hayan experimentado traumas o dificultades emocionales.</p>
-                    </li>
-                    <li>
-                        <p><b>Contribuirás a proyectos que beneficien no solo a los niños en el orfanato, sino también a la comunidad en general,</b> como la construcción de pozos de agua, programas de nutrición comunitaria, o iniciativas de desarrollo económico local.</p>
-                    </li>
-                </div>
-        </section>
-
-        <section id="contenedorDonacion" class="contenedorDonacion">
-
-            <div class="donacion">
-                <img class="imgDonacion" src="./data/img/childrenImg/10.jpg"></img>
+            <h1>How can your contribution help?</h1>
+            <div class="tributeList">
+                <li>
+                    <p><b>You will help ensure that children have access to quality education,</b> including school fees, educational materials, and extracurricular programs.</p>
+                </li>
+                <li>
+                    <p><b>Your donation can finance necessary medical care,</b> medications, and preventive health services to ensure the physical and emotional well-being of the children.</p>
+                </li>
+                <li>
+                    <p><b>Your donation can support psychological and emotional support programs for children</b> who have experienced trauma or emotional difficulties.</p>
+                </li>
+                <li>
+                    <p><b>You will contribute to projects that benefit not only the children in the orphanage but also the community at large,</b> such as the construction of water wells, community nutrition programs, or local economic development initiatives.</p>
+                </li>
             </div>
-
-            <div class="textoDonacion">
-                <h1>¿Por que donar?</h1>
-                <p> Tu donativo tendrá un impacto directo y tangible en la vida de niños vulnerables en el orfanato.
-                     Contribuirás a proporcionarles comida, vivienda, educación y atención médica, brindándoles 
-                     oportunidades para un futuro mejor.
-                </p>
-                <p>
-                    Tu generosidad puede marcar la diferencia entre un niño que enfrenta dificultades y carencias,
-                     y uno que tiene acceso a oportunidades y esperanza para el futuro. Garantizando alimentos nutritivos, 
-                     incluyendo frutas, verduras, granos enteros, proteínas magras y lácteos, 
-                     para garantizar una ingesta equilibrada de nutrientes esenciales.
-                </p>
-                <h1>Aporte su granito de arena</h1>
-                <div class="rowDonacion">
-                    <a id="botonDonacion"></a>
-                    <p> <i>* haga click en el icono para donar </i></p>
-                </div>
-            </div>
-
-
         </section>
         
 
-
+        <section id="contenedorDonacion" class="contenedorDonacion">
+            <div class="donacion">
+                <img class="imgDonacion" src="./data/img/childrenImg/10.jpg"></img>
+            </div>
+            <div class="textoDonacion">
+                <h1>Why donate?</h1>
+                <p>Your donation will have a direct and tangible impact on the lives of vulnerable children in the orphanage.
+                    You will contribute to providing them with food, housing, education, and medical care, giving them
+                    opportunities for a better future.</p>
+                <p>Your generosity can make the difference between a child facing difficulties and shortcomings,
+                    and one who has access to opportunities and hope for the future. Ensuring nutritious food,
+                    including fruits, vegetables, whole grains, lean proteins, and dairy,
+                    to ensure a balanced intake of essential nutrients.</p>
+                <h1>Make Your Contribution</h1>
+                <div class="rowDonacion">
+                    <a id="botonDonacion"></a>
+                    <p><i>* Click on the icon to donate</i></p>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <footer>
