--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a>
                     <li class="cambiarIdioma" >
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Globe"><circle cx="12" cy="12" r="10"/><ellipse cx="12" cy="12" rx="10" ry="4" transform="rotate(90 12 12)"/><path d="M2 12h20"/></svg>
-                        <ul class="seleccionIdioma">
+                        <ul class="seleccionIdioma" style="display: none;">
                             <li><a href="./index_EN.html">English</a></li>
                             <li><a href="./index.html">Español</a></li>
                         </ul>
@@ -36,7 +36,7 @@
                 <a>
                     <li class="cambiarIdiomaIcon" >
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ai ai-Globe"><circle cx="12" cy="12" r="10"/><ellipse cx="12" cy="12" rx="10" ry="4" transform="rotate(90 12 12)"/><path d="M2 12h20"/></svg>
-                        <ul class="seleccionIdiomaIcon">
+                        <ul class="seleccionIdiomaIcon" style="display: none;">
                             <li><a href="./index_EN.html">English</a></li>
                             <li><a href="./index.html">Español</a></li>
                         </ul>
